[package]
name = "wp_query_rs"
version = "0.1.4"
edition = "2021"
authors = ["Austin John Mayer"]
description = "A rust implementation of the classic WP_Query utility to access WordPress posts outside of a WordPress environment."
documentation = "https://github.com/tronicboy1/wp_query_rs"
readme = "README.md"
homepage = "https://github.com/tronicboy1/wp_query_rs"
repository = "https://github.com/tronicboy1/wp_query_rs"
license = "MIT OR Apache-2.0"
keywords = ["wordpress", "wp", "wp_query", "mysql", "wp_post"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ext-php-rs = "0.10.1"
mysql = "24.0.0"
mysql_common = "0.30.6"
once_cell = "1.18.0"
sql_paginatorr = "0.1.1"
