[package]
name = "wp_query_rs"
version = "0.4.1"
edition = "2021"
authors = ["Austin John Mayer"]
description = "A rust implementation of the classic WP_Query utility to access WordPress posts outside of a WordPress environment."
documentation = "https://github.com/tronicboy1/wp_query_rs"
readme = "README.md"
homepage = "https://crates.io/crates/wp_query_rs"
repository = "https://github.com/tronicboy1/wp_query_rs"
license = "MIT OR Apache-2.0"
keywords = ["wordpress", "wp", "wp_query", "mysql", "wp_post"]

[dependencies]
ext-php-rs = { version = "0.10.1", optional = true }
mysql = { version = "24.0.0", default-features = false, optional = true }
mysql_common = "0.30.6"
sql_paginatorr = "0.1.1"
chrono = "0.4.26"
serde = "1.0.188"
url = { version = "2.4.1", optional = true }
regex = { version = "1.9.5", optional = true }
serde_php = { version = "0.5.0", optional = true }
mysql_async = { version = "0.32.2", default-features = false, optional = true }
tokio = { version = "1.33.0", optional = true, features = ["full"] }

[features]
query_sync = ["mysql"]
query_async = ["mysql_async", "tokio"]
native-tls = ["mysql/native-tls"]
rustls = ["mysql/default-rustls"]
php = ["ext-php-rs"]
rewrite = ["url", "regex", "serde_php"]
